--- a/arm-unknown-linux-gnueabihf/.config
+++ b/arm-unknown-linux-gnueabihf/.config
@@ -1,10 +1,11 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# crosstool-NG 1.24.0.388_94b98a4 Configuration
+# crosstool-NG 1.24.0.500_584e57e Configuration
 #
 CT_CONFIGURE_has_cxx11=y
 CT_CONFIGURE_has_lzip=y
 CT_CONFIGURE_has_curl=y
+CT_CONFIGURE_has_rsync=y
 CT_CONFIGURE_has_make_3_81_or_newer=y
 CT_CONFIGURE_has_make_4_0_or_newer=y
 CT_CONFIGURE_has_libtool_2_4_or_newer=y
@@ -23,7 +24,7 @@ CT_CONFIGURE_has_sha1sum=y
 CT_CONFIGURE_has_sha256sum=y
 CT_CONFIGURE_has_sha512sum=y
 CT_CONFIGURE_has_install_with_strip_program=y
-CT_VERSION="1.24.0.388_94b98a4"
+CT_VERSION="1.24.0.500_584e57e"
 CT_VCHECK=""
 CT_CONFIG_VERSION_ENV="3"
 CT_CONFIG_VERSION_CURRENT="3"
@@ -94,6 +95,7 @@ CT_PARALLEL_JOBS=0
 CT_LOAD=""
 CT_USE_PIPES=y
 CT_EXTRA_CFLAGS_FOR_BUILD=""
+CT_EXTRA_CXXFLAGS_FOR_BUILD=""
 CT_EXTRA_LDFLAGS_FOR_BUILD=""
 CT_EXTRA_CFLAGS_FOR_HOST=""
 CT_EXTRA_LDFLAGS_FOR_HOST=""
@@ -261,6 +263,9 @@ CT_LINUX_PKG_NAME="linux"
 CT_LINUX_SRC_RELEASE=y
 # CT_LINUX_SRC_DEVEL is not set
 CT_LINUX_PATCH_ORDER="global"
+# CT_LINUX_V_5_15 is not set
+# CT_LINUX_V_5_14 is not set
+# CT_LINUX_V_5_13 is not set
 CT_LINUX_V_5_12=y
 # CT_LINUX_V_5_11 is not set
 # CT_LINUX_V_5_10 is not set
@@ -285,55 +290,31 @@ CT_LINUX_V_5_12=y
 # CT_LINUX_V_4_11 is not set
 # CT_LINUX_V_4_10 is not set
 # CT_LINUX_V_4_9 is not set
-# CT_LINUX_V_4_8 is not set
-# CT_LINUX_V_4_7 is not set
-# CT_LINUX_V_4_6 is not set
-# CT_LINUX_V_4_5 is not set
 # CT_LINUX_V_4_4 is not set
-# CT_LINUX_V_4_3 is not set
-# CT_LINUX_V_4_2 is not set
 # CT_LINUX_V_4_1 is not set
-# CT_LINUX_V_4_0 is not set
-# CT_LINUX_V_3_19 is not set
 # CT_LINUX_V_3_18 is not set
-# CT_LINUX_V_3_17 is not set
 # CT_LINUX_V_3_16 is not set
-# CT_LINUX_V_3_15 is not set
-# CT_LINUX_V_3_14 is not set
 # CT_LINUX_V_3_13 is not set
 # CT_LINUX_V_3_12 is not set
-# CT_LINUX_V_3_11 is not set
 # CT_LINUX_V_3_10 is not set
-# CT_LINUX_V_3_9 is not set
-# CT_LINUX_V_3_8 is not set
-# CT_LINUX_V_3_7 is not set
-# CT_LINUX_V_3_6 is not set
-# CT_LINUX_V_3_5 is not set
 # CT_LINUX_V_3_4 is not set
-# CT_LINUX_V_3_3 is not set
 # CT_LINUX_V_3_2 is not set
-# CT_LINUX_V_3_1 is not set
-# CT_LINUX_V_3_0 is not set
-# CT_LINUX_V_2_6_39 is not set
-# CT_LINUX_V_2_6_38 is not set
-# CT_LINUX_V_2_6_37 is not set
-# CT_LINUX_V_2_6_36 is not set
-# CT_LINUX_V_2_6_35 is not set
-# CT_LINUX_V_2_6_34 is not set
-# CT_LINUX_V_2_6_33 is not set
 # CT_LINUX_V_2_6_32 is not set
-CT_LINUX_VERSION="5.12.12"
+CT_LINUX_VERSION="5.12.16"
 CT_LINUX_MIRRORS="$(CT_Mirrors kernel.org linux ${CT_LINUX_VERSION})"
 CT_LINUX_ARCHIVE_FILENAME="@{pkg_name}-@{version}"
 CT_LINUX_ARCHIVE_DIRNAME="@{pkg_name}-@{version}"
 CT_LINUX_ARCHIVE_FORMATS=".tar.xz .tar.gz"
 CT_LINUX_SIGNATURE_FORMAT="unpacked/.sign"
+CT_LINUX_later_than_5_3=y
+CT_LINUX_5_3_or_later=y
 CT_LINUX_later_than_4_8=y
 CT_LINUX_4_8_or_later=y
 CT_LINUX_later_than_3_7=y
 CT_LINUX_3_7_or_later=y
 CT_LINUX_later_than_3_2=y
 CT_LINUX_3_2_or_later=y
+CT_KERNEL_DEP_RSYNC=y
 CT_KERNEL_LINUX_VERBOSITY_0=y
 # CT_KERNEL_LINUX_VERBOSITY_1 is not set
 # CT_KERNEL_LINUX_VERBOSITY_2 is not set
@@ -368,7 +349,8 @@ CT_BINUTILS_PKG_NAME="binutils"
 CT_BINUTILS_SRC_RELEASE=y
 # CT_BINUTILS_SRC_DEVEL is not set
 CT_BINUTILS_PATCH_ORDER="global"
-CT_BINUTILS_V_2_36=y
+CT_BINUTILS_V_2_37=y
+# CT_BINUTILS_V_2_36 is not set
 # CT_BINUTILS_V_2_35 is not set
 # CT_BINUTILS_V_2_34 is not set
 # CT_BINUTILS_V_2_33 is not set
@@ -379,10 +361,7 @@ CT_BINUTILS_V_2_36=y
 # CT_BINUTILS_V_2_28 is not set
 # CT_BINUTILS_V_2_27 is not set
 # CT_BINUTILS_V_2_26 is not set
-# CT_BINUTILS_V_2_25 is not set
-# CT_BINUTILS_V_2_24 is not set
-# CT_BINUTILS_V_2_23 is not set
-CT_BINUTILS_VERSION="2.36.1"
+CT_BINUTILS_VERSION="2.37"
 CT_BINUTILS_MIRRORS="$(CT_Mirrors GNU binutils) $(CT_Mirrors sourceware binutils/releases)"
 CT_BINUTILS_ARCHIVE_FILENAME="@{pkg_name}-@{version}"
 CT_BINUTILS_ARCHIVE_DIRNAME="@{pkg_name}-@{version}"
@@ -392,18 +371,12 @@ CT_BINUTILS_later_than_2_30=y
 CT_BINUTILS_2_30_or_later=y
 CT_BINUTILS_later_than_2_27=y
 CT_BINUTILS_2_27_or_later=y
-CT_BINUTILS_later_than_2_25=y
-CT_BINUTILS_2_25_or_later=y
-CT_BINUTILS_later_than_2_23=y
-CT_BINUTILS_2_23_or_later=y
+CT_BINUTILS_later_than_2_26=y
+CT_BINUTILS_2_26_or_later=y
 
 #
 # GNU binutils
 #
-CT_BINUTILS_HAS_HASH_STYLE=y
-CT_BINUTILS_HAS_GOLD=y
-CT_BINUTILS_HAS_PLUGINS=y
-CT_BINUTILS_HAS_PKGVERSION_BUGURL=y
 CT_BINUTILS_GOLD_SUPPORTS_ARCH=y
 CT_BINUTILS_GOLD_SUPPORT=y
 CT_BINUTILS_FORCE_LD_BFD_DEFAULT=y
@@ -417,7 +390,6 @@ CT_BINUTILS_LD_WRAPPER=y
 CT_BINUTILS_LINKER_DEFAULT="bfd"
 CT_BINUTILS_PLUGINS=y
 CT_BINUTILS_RELRO=m
-CT_BINUTILS_DETERMINISTIC_ARCHIVES=y
 CT_BINUTILS_EXTRA_CONFIG_ARRAY=""
 # CT_BINUTILS_FOR_TARGET is not set
 CT_ALL_BINUTILS_CHOICES="BINUTILS"
@@ -445,6 +417,7 @@ CT_GLIBC_PKG_NAME="glibc"
 CT_GLIBC_SRC_RELEASE=y
 # CT_GLIBC_SRC_DEVEL is not set
 CT_GLIBC_PATCH_ORDER="global"
+# CT_GLIBC_V_2_34 is not set
 # CT_GLIBC_V_2_33 is not set
 # CT_GLIBC_V_2_32 is not set
 # CT_GLIBC_V_2_31 is not set
@@ -456,17 +429,8 @@ CT_GLIBC_PATCH_ORDER="global"
 # CT_GLIBC_V_2_25 is not set
 # CT_GLIBC_V_2_24 is not set
 # CT_GLIBC_V_2_23 is not set
-# CT_GLIBC_V_2_22 is not set
-# CT_GLIBC_V_2_21 is not set
-# CT_GLIBC_V_2_20 is not set
 # CT_GLIBC_V_2_19 is not set
-# CT_GLIBC_V_2_18 is not set
 CT_GLIBC_V_2_17=y
-# CT_GLIBC_V_2_16_0 is not set
-# CT_GLIBC_V_2_15 is not set
-# CT_GLIBC_V_2_14_1 is not set
-# CT_GLIBC_V_2_13 is not set
-# CT_GLIBC_V_2_12_2 is not set
 # CT_GLIBC_V_2_12_1 is not set
 CT_GLIBC_VERSION="2.17"
 CT_GLIBC_MIRRORS="$(CT_Mirrors GNU glibc)"
@@ -521,7 +485,7 @@ CT_GLIBC_FORCE_UNWIND=y
 # CT_GLIBC_KERNEL_VERSION_NONE is not set
 CT_GLIBC_KERNEL_VERSION_AS_HEADERS=y
 # CT_GLIBC_KERNEL_VERSION_CHOSEN is not set
-CT_GLIBC_MIN_KERNEL="5.12.12"
+CT_GLIBC_MIN_KERNEL="5.12.16"
 # CT_GLIBC_ENABLE_COMMON_FLAG is not set
 CT_ALL_LIBC_CHOICES="AVR_LIBC BIONIC GLIBC MINGW_W64 MOXIEBOX MUSL NEWLIB NONE UCLIBC"
 CT_LIBC_SUPPORT_THREADS_ANY=y
@@ -572,7 +536,6 @@ CT_GCC_V_10=y
 # CT_GCC_V_6 is not set
 # CT_GCC_V_5 is not set
 # CT_GCC_V_4_9 is not set
-# CT_GCC_V_4_8 is not set
 CT_GCC_VERSION="10.3.0"
 CT_GCC_MIRRORS="$(CT_Mirrors GNU gcc/gcc-${CT_GCC_VERSION}) $(CT_Mirrors sourceware gcc/releases/gcc-${CT_GCC_VERSION})"
 CT_GCC_ARCHIVE_FILENAME="@{pkg_name}-@{version}"
@@ -611,6 +574,7 @@ CT_CC_GCC_CONFIG_TLS=m
 #
 CT_CC_GCC_USE_GRAPHITE=y
 CT_CC_GCC_USE_LTO=y
+CT_CC_GCC_LTO_ZSTD=m
 
 #
 # Settings for libraries running on target
@@ -672,47 +636,37 @@ CT_DUMA_CUSTOM_WRAPPER=y
 CT_DEBUG_GDB=y
 CT_DEBUG_GDB_PKG_KSYM="GDB"
 CT_GDB_DIR_NAME="gdb"
-CT_GDB_USE_GNU=y
-CT_GDB_USE="GDB"
 CT_GDB_PKG_NAME="gdb"
 CT_GDB_SRC_RELEASE=y
 # CT_GDB_SRC_DEVEL is not set
 CT_GDB_PATCH_ORDER="global"
-CT_GDB_V_9_2=y
+CT_GDB_V_11_1=y
+# CT_GDB_V_10_2 is not set
+# CT_GDB_V_9_2 is not set
 # CT_GDB_V_8_3 is not set
 # CT_GDB_V_8_2 is not set
 # CT_GDB_V_8_1 is not set
 # CT_GDB_V_8_0 is not set
 # CT_GDB_V_7_12 is not set
 # CT_GDB_V_7_11 is not set
-# CT_GDB_V_7_10 is not set
-# CT_GDB_V_7_9 is not set
-# CT_GDB_V_7_8 is not set
-# CT_GDB_V_7_7 is not set
-# CT_GDB_V_7_6 is not set
-# CT_GDB_V_7_5 is not set
-# CT_GDB_V_7_4 is not set
-# CT_GDB_V_7_3 is not set
-# CT_GDB_V_7_2 is not set
-# CT_GDB_V_7_1 is not set
-# CT_GDB_V_7_0 is not set
-# CT_GDB_V_6_8 is not set
-CT_GDB_VERSION="9.2"
+CT_GDB_VERSION="11.1"
 CT_GDB_MIRRORS="$(CT_Mirrors GNU gdb) $(CT_Mirrors sourceware gdb/releases)"
 CT_GDB_ARCHIVE_FILENAME="@{pkg_name}-@{version}"
 CT_GDB_ARCHIVE_DIRNAME="@{pkg_name}-@{version}"
 CT_GDB_ARCHIVE_FORMATS=".tar.xz .tar.gz"
 CT_GDB_SIGNATURE_FORMAT=""
+CT_GDB_11_1_or_later=y
+CT_GDB_11_1_or_older=y
+CT_GDB_later_than_10_2=y
+CT_GDB_10_2_or_later=y
 CT_GDB_later_than_8_3=y
 CT_GDB_8_3_or_later=y
 CT_GDB_later_than_8_0=y
 CT_GDB_8_0_or_later=y
 CT_GDB_later_than_7_12=y
 CT_GDB_7_12_or_later=y
-CT_GDB_later_than_7_2=y
-CT_GDB_7_2_or_later=y
-CT_GDB_later_than_7_0=y
-CT_GDB_7_0_or_later=y
+CT_GDB_later_than_7_11=y
+CT_GDB_7_11_or_later=y
 CT_GDB_CROSS=y
 # CT_GDB_CROSS_SIM is not set
 # CT_GDB_CROSS_PYTHON is not set
@@ -721,10 +675,7 @@ CT_GDB_NATIVE=y
 CT_GDB_GDBSERVER=y
 # CT_GDB_NATIVE_BUILD_IPA_LIB is not set
 # CT_GDB_NATIVE_STATIC_LIBSTDCXX is not set
-CT_GDB_HAS_PKGVERSION_BUGURL=y
-CT_GDB_HAS_PYTHON=y
-CT_GDB_INSTALL_GDBINIT=y
-CT_GDB_HAS_IPA_LIB=y
+CT_GDB_GDBSERVER_TOPLEVEL=y
 CT_DEBUG_LTRACE=y
 CT_DEBUG_LTRACE_PKG_KSYM="LTRACE"
 CT_LTRACE_DIR_NAME="ltrace"
@@ -733,7 +684,6 @@ CT_LTRACE_SRC_RELEASE=y
 # CT_LTRACE_SRC_DEVEL is not set
 CT_LTRACE_PATCH_ORDER="global"
 CT_LTRACE_V_0_7_3=y
-# CT_LTRACE_V_0_5_3 is not set
 CT_LTRACE_VERSION="0.7.3"
 CT_LTRACE_MIRRORS="http://ftp.debian.org/debian/pool/main/l/ltrace ftp://ftp.debian.org/debian/pool/main/l/ltrace"
 CT_LTRACE_ARCHIVE_FILENAME="@{pkg_name}_@{version}.orig"
@@ -747,6 +697,7 @@ CT_STRACE_PKG_NAME="strace"
 CT_STRACE_SRC_RELEASE=y
 # CT_STRACE_SRC_DEVEL is not set
 CT_STRACE_PATCH_ORDER="global"
+# CT_STRACE_V_5_14 is not set
 CT_STRACE_V_5_11=y
 # CT_STRACE_V_5_10 is not set
 # CT_STRACE_V_5_9 is not set
@@ -771,16 +722,6 @@ CT_STRACE_V_5_11=y
 # CT_STRACE_V_4_17 is not set
 # CT_STRACE_V_4_16 is not set
 # CT_STRACE_V_4_15 is not set
-# CT_STRACE_V_4_14 is not set
-# CT_STRACE_V_4_13 is not set
-# CT_STRACE_V_4_12 is not set
-# CT_STRACE_V_4_11 is not set
-# CT_STRACE_V_4_10 is not set
-# CT_STRACE_V_4_9 is not set
-# CT_STRACE_V_4_8 is not set
-# CT_STRACE_V_4_7 is not set
-# CT_STRACE_V_4_6 is not set
-# CT_STRACE_V_4_5_20 is not set
 CT_STRACE_VERSION="5.11"
 CT_STRACE_MIRRORS="https://strace.io/files/${CT_STRACE_VERSION} https://github.com/strace/strace/releases/download/v${CT_STRACE_VERSION}"
 CT_STRACE_ARCHIVE_FILENAME="@{pkg_name}-@{version}"
@@ -816,10 +757,10 @@ CT_GETTEXT_PKG_NAME="gettext"
 CT_GETTEXT_SRC_RELEASE=y
 # CT_GETTEXT_SRC_DEVEL is not set
 CT_GETTEXT_PATCH_ORDER="global"
-CT_GETTEXT_V_0_20_1=y
+CT_GETTEXT_V_0_21=y
+# CT_GETTEXT_V_0_20_1 is not set
 # CT_GETTEXT_V_0_19_8_1 is not set
-# CT_GETTEXT_V_0_19_7 is not set
-CT_GETTEXT_VERSION="0.20.1"
+CT_GETTEXT_VERSION="0.21"
 CT_GETTEXT_MIRRORS="$(CT_Mirrors GNU gettext)"
 CT_GETTEXT_ARCHIVE_FILENAME="@{pkg_name}-@{version}"
 CT_GETTEXT_ARCHIVE_DIRNAME="@{pkg_name}-@{version}"
@@ -834,9 +775,6 @@ CT_GMP_SRC_RELEASE=y
 CT_GMP_PATCH_ORDER="global"
 CT_GMP_V_6_2=y
 # CT_GMP_V_6_1 is not set
-# CT_GMP_V_6_0 is not set
-# CT_GMP_V_5_1 is not set
-# CT_GMP_V_5_0 is not set
 CT_GMP_VERSION="6.2.1"
 CT_GMP_MIRRORS="https://gmplib.org/download/gmp https://gmplib.org/download/gmp/archive $(CT_Mirrors GNU gmp)"
 CT_GMP_ARCHIVE_FILENAME="@{pkg_name}-@{version}"
@@ -906,7 +844,6 @@ CT_LIBICONV_SRC_RELEASE=y
 CT_LIBICONV_PATCH_ORDER="global"
 CT_LIBICONV_V_1_16=y
 # CT_LIBICONV_V_1_15 is not set
-# CT_LIBICONV_V_1_14 is not set
 CT_LIBICONV_VERSION="1.16"
 CT_LIBICONV_MIRRORS="$(CT_Mirrors GNU libiconv)"
 CT_LIBICONV_ARCHIVE_FILENAME="@{pkg_name}-@{version}"
@@ -923,9 +860,6 @@ CT_MPC_PATCH_ORDER="global"
 CT_MPC_V_1_2=y
 # CT_MPC_V_1_1 is not set
 # CT_MPC_V_1_0 is not set
-# CT_MPC_V_0_9 is not set
-# CT_MPC_V_0_8 is not set
-# CT_MPC_V_0_7 is not set
 CT_MPC_VERSION="1.2.0"
 CT_MPC_MIRRORS="http://www.multiprecision.org/downloads $(CT_Mirrors GNU mpc)"
 CT_MPC_ARCHIVE_FILENAME="@{pkg_name}-@{version}"
@@ -944,7 +878,6 @@ CT_MPFR_PATCH_ORDER="global"
 CT_MPFR_V_4_1=y
 # CT_MPFR_V_4_0 is not set
 # CT_MPFR_V_3_1 is not set
-# CT_MPFR_V_3_0 is not set
 CT_MPFR_VERSION="4.1.0"
 CT_MPFR_MIRRORS="http://www.mpfr.org/mpfr-${CT_MPFR_VERSION} $(CT_Mirrors GNU mpfr)"
 CT_MPFR_ARCHIVE_FILENAME="@{pkg_name}-@{version}"
@@ -972,6 +905,7 @@ CT_NCURSES_ARCHIVE_FILENAME="@{pkg_name}-@{version}"
 CT_NCURSES_ARCHIVE_DIRNAME="@{pkg_name}-@{version}"
 CT_NCURSES_ARCHIVE_FORMATS=".tar.gz"
 CT_NCURSES_SIGNATURE_FORMAT="packed/.sig"
+CT_NCURSES_NEW_ABI=y
 CT_NCURSES_HOST_CONFIG_ARGS=""
 CT_NCURSES_HOST_DISABLE_DB=y
 CT_NCURSES_HOST_FALLBACKS="linux,xterm,xterm-color,xterm-256color,vt100"
@@ -996,6 +930,7 @@ CT_ALL_COMP_LIBS_CHOICES="CLOOG EXPAT GETTEXT GMP GNUPRUMCU ISL LIBELF LIBICONV 
 CT_LIBICONV_NEEDED=y
 CT_GETTEXT_NEEDED=y
 CT_GMP_NEEDED=y
+CT_GMP_TARGET=y
 CT_MPFR_NEEDED=y
 CT_ISL_NEEDED=y
 CT_MPC_NEEDED=y
