--- a/.github/workflows/Test.yml
+++ b/.github/workflows/Test.yml
@@ -25,7 +25,8 @@ jobs:
             armv7-unknown-linux-gnueabihf \
             armv7-unknown-linux-musleabihf \
             arm-unknown-linux-gnueabi \
-            arm-unknown-linux-gnueabihf
+            arm-unknown-linux-gnueabihf \
+            arm-unknown-linux-musleabihf
       - name: brew linkage
         run: |
           brew linkage --test --strict \
@@ -38,4 +39,5 @@ jobs:
             armv7-unknown-linux-gnueabihf \
             armv7-unknown-linux-musleabihf \
             arm-unknown-linux-gnueabi \
-            arm-unknown-linux-gnueabihf
+            arm-unknown-linux-gnueabihf \
+            arm-unknown-linux-musleabihf
